# django-routes-search

./: README.md  pyproject.toml
src/django_routes_search/: __init__.py  apps.py  search.py
